--- a/index.html
+++ b/index.html
@@ -16,6 +16,37 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="page">
+      <header>
+        <h1>Mentoria</h1>
+        <p>Preencha o formulário abaixo para agendar sua mentoria</p>
+      </header>
+
+      <main>
+        <form>
+          <fieldset>
+            <legend>Informações pessoais</legend>
+
+            <div class="col-2">
+              <div class="input-wrapper">
+                <label for="name">Nome</label>
+                <input type="text" name="name" id="name" />
+              </div>
+              <div class="input-wrapper">
+                <label for="lastname">Sobrenome</label>
+                <input type="text" name="lastname" id="lastname">
+              </div>
+            </div>
+            <label for="email">E-mail<span>(digite um e-mail válido)</span></label>
+            <input type="email" name="email" id="email" required>
+            <label for="password">Senha<span>(mínimo de 6 caracteres)</span></label>
+            <input type="password" name="password" id="password" minlength="6"
+              required>
+          </fieldset>
+
+        </form>
+      </main>
+    </div>
 
   </body>
 </html>
