feat: add fieldset mentor

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
               required>
           </fieldset>
 
+          <fieldset>
+            <legend>Informações do mentor</legend>
+
+            <label for="mentor">Nome do seu mentor<span>(só o primeiro nome)</span></label>
+            <input type="text" name="mentor" id="mentor" required>
+          </fieldset>
+
         </form>
       </main>
     </div>
