--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </header>
 
       <main>
-        <form>
+        <form id="mentorship-form">
           <fieldset>
             <legend>Informações pessoais</legend>
 
@@ -51,7 +51,50 @@
             <input type="text" name="mentor" id="mentor" required>
           </fieldset>
 
+          <fieldset>
+            <legend>Seus horários disponíveis</legend>
+
+            <h2>Primeira Mentoria</h2>
+            <div class="col-2">
+              <div class="input-wrapper">
+                <label for="first-date">Data<span>(DD/MM/AAAA)</span></label>
+                <input type="date" name="first-date" id="first-date" />
+              </div>
+
+              <div class="col-2">
+                <div class="input-wrapper">
+                  <label for="first-start">Das</label>
+                  <input type="time" name="first-start" id="first-start" />
+                </div>
+                <div class="input-wrapper">
+                  <label for="first-finish">Até</label>
+                  <input type="time" name="first-finish" id="first-finish">
+                </div>
+              </div>
+            </div>
+
+            <h2>Segunda Mentoria</h2>
+            <div class="col-2">
+              <div class="input-wrapper">
+                <label for="second-date">Data<span>(DD/MM/AAAA)</span></label>
+                <input type="date" name="second-date" id="second-date" />
+              </div>
+
+              <div class="col-2">
+                <div class="input-wrapper">
+                  <label for="second-start">Das</label>
+                  <input type="time" name="second-start" id="second-start" />
+                </div>
+                <div class="input-wrapper">
+                  <label for="second-finish">Até</label>
+                  <input type="time" name="second-finish" id="second-finish">
+                </div>
+              </div>
+            </div>
+          </fieldset>
+
         </form>
+
       </main>
     </div>
 
